# texas-holdem

./: .gitignore  LICENSE  README.md  _commitmsg.txt  main.py  poker.spec  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDIT-2026-07-17.md  AUDIT.md  GODOT_PROTOCOL.md  L5_SCOPE.md  MULTIPLAYER.md
godot/: project.godot
godot/test/unit/: test_player_info_panel.gd  test_player_info_panel.gd.uid  test_smoke.gd  test_smoke.gd.uid
godot/ui/: player_info_panel.gd  player_info_panel.gd.uid  player_info_panel.tscn
holdem/: __init__.py  __main__.py  audio.py  client_server.py  client_view.py  contract.py  engine.py  gui.py  hand_history.py  notes.py  onboarding.py  player_info.py  session_stats.py  settings.py
holdem/p2p/: __init__.py  bg_svp.py  deal_map.py  deck_audit.py  dleq.py  elgamal.py  identity.py  inmemory_transport.py  invite.py  keygen_pop.py  mental_deal.py  mental_deal_driver.py  mental_poker.py  pedersen.py  replica_table.py  ristretto.py  session.py  shuffle.py  shuffle_mp.py  shuffle_proof.py  stun.py  transport.py  wire.py
native/: README.md
tests/: conftest.py  gui_smoke.py  test_bg_svp.py  test_client_server.py  test_client_view.py  test_contract.py  test_deal_map.py  test_deck_audit.py  test_dleq.py  test_elgamal.py  test_engine.py  test_keygen_pop.py  test_mental_deal.py  test_mental_deal_driver.py  test_mental_poker.py  test_p2p.py  test_pedersen.py  test_player_info.py  test_replica_table.py  test_ristretto.py  test_session_deal.py  test_session_hand.py  test_session_inmemory.py  test_session_match.py  test_session_sequencing.py  test_shuffle.py  test_shuffle_mp.py  test_shuffle_proof.py  test_transport_security.py
